add colab badges

--- a/ConvNet/convnet-cifar.ipynb
+++ b/ConvNet/convnet-cifar.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "w0xzD18Y8LJa"
@@ -9,7 +10,10 @@
         "A collection of deep learning models in JAX.\n",
         "\n",
         "*   Author: Tianlin Liu\n",
-        "*   GitHub Repository: https://github.com/liutianlin0121/jax-deep-learning-models\n"
+        "*   GitHub Repository: https://github.com/liutianlin0121/jax-deep-learning-models\n",
+        "\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/liutianlin0121/jax-deep-learning-models/blob/main/ConvNet/convnet-cifar.ipynb)\n",
+        "\n"
       ]
     },
     {
