--- a/MLP/mlp-mnist.ipynb
+++ b/MLP/mlp-mnist.ipynb
@@ -269,9 +269,9 @@
         "\n",
         "    test_loss_total = 0.0\n",
         "    test_acc_total = 0.0\n",
-        "    for imeages, labels in test_loader:\n",
+        "    for images, labels in test_loader:\n",
         "      _, test_loss_batch, test_accuracy_batch = apply_model(\n",
-        "        state, imeages, labels)\n",
+        "        state, images, labels)\n",
         "      test_loss_total += test_loss_batch\n",
         "      test_acc_total += test_accuracy_batch\n",
         "\n",
