--- a/ConvNet/convnet-cifar.ipynb
+++ b/ConvNet/convnet-cifar.ipynb
@@ -34,9 +34,9 @@
       "outputs": [],
       "source": [
         "if 'google.colab' in str(get_ipython()):\n",
-        "  !pip install ml-collections -q\n",
-        "  !pip install \"jax[cuda11_cudnn82]\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html -q\n",
-        "  !pip install flax -q"
+        "  %pip install ml-collections -q\n",
+        "  %pip install \"jax[cuda11_cudnn82]\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html -q\n",
+        "  %pip install flax -q"
       ]
     },
     {
