--- a/ConvNet/convnet-cifar-dropout.ipynb
+++ b/ConvNet/convnet-cifar-dropout.ipynb
@@ -12,7 +12,7 @@
         "*   Author: Tianlin Liu\n",
         "*   GitHub Repository: https://github.com/liutianlin0121/jax-deep-learning-models\n",
         "\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/liutianlin0121/jax-deep-learning-models/blob/main/ConvNet/convnet-cifar.ipynb)\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/liutianlin0121/jax-deep-learning-models/blob/main/ConvNet/convnet-cifar-dropout.ipynb)\n",
         "\n"
       ]
     },
@@ -34,9 +34,9 @@
       "outputs": [],
       "source": [
         "if 'google.colab' in str(get_ipython()):\n",
-        "  !pip install ml-collections -q\n",
-        "  !pip install \"jax[cuda11_cudnn82]\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html -q\n",
-        "  !pip install flax -q"
+        "  %pip install ml-collections -q\n",
+        "  %pip install \"jax[cuda11_cudnn82]\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html -q\n",
+        "  %pip install flax -q"
       ]
     },
     {
