--- a/ConvNet/resnet-cifar.ipynb
+++ b/ConvNet/resnet-cifar.ipynb
@@ -101,6 +101,7 @@
         "  \"\"\"Shows a single image.\"\"\"\n",
         "  if ax is None:\n",
         "    ax = plt.gca()\n",
+        "  # De-normalize the image.\n",
         "  img = copy.copy(np.array(img.squeeze()))\n",
         "  img[..., 0] = img[..., 0] * std[0] + mean[0]\n",
         "  img[..., 1] = img[..., 1] * std[1] + mean[1]\n",
