update descriptions in readme

--- a/AE/vae-conv-mnist.ipynb
+++ b/AE/vae-conv-mnist.ipynb
@@ -16,6 +16,16 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Description\n",
+        "\n",
+        "In this notebook, we will be training a ConvNet-based [variational autoencoder](https://arxiv.org/abs/1312.6114) on the MNIST dataset."
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Tt0rL4ycp4ZB"
