--- a/ConvNet/resnet-cifar.ipynb
+++ b/ConvNet/resnet-cifar.ipynb
@@ -12,7 +12,17 @@
         "*   Author: Tianlin Liu\n",
         "*   GitHub Repository: https://github.com/liutianlin0121/jax-deep-learning-models\n",
         "\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/liutianlin0121/jax-deep-learning-models/blob/main/ConvNet/resnet-cifar.ipynb)\n"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/liutianlin0121/jax-deep-learning-models/blob/main/ConvNet/resnet-cifar.ipynb)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Description\n",
+        "\n",
+        "In this notebook, we will be training a [ResNet-18](https://arxiv.org/abs/1512.03385) on the CIFAR-10 dataset."
       ]
     },
     {
