--- a/ConvNet/convnet-cifar-batchnorm.ipynb
+++ b/ConvNet/convnet-cifar-batchnorm.ipynb
@@ -16,6 +16,16 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Description\n",
+        "\n",
+        "In this notebook, we will be training a convolutional neural network on the CIFAR-10 dataset, with the aid of [batchnorm](https://arxiv.org/abs/1502.03167)."
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Tt0rL4ycp4ZB"
