--- a/ConvNet/convnet-cifar-dropout.ipynb
+++ b/ConvNet/convnet-cifar-dropout.ipynb
@@ -17,6 +17,16 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Description\n",
+        "\n",
+        "In this notebook, we will be training a convolutional neural network on the CIFAR-10 dataset, with the aid of [dropout](https://jmlr.org/papers/v15/srivastava14a.html)."
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Tt0rL4ycp4ZB"
