--- a/ConvNet/convnet-mnist.ipynb
+++ b/ConvNet/convnet-mnist.ipynb
@@ -16,6 +16,16 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Description\n",
+        "\n",
+        "In this notebook, we will be training a convolutional neural network on the MNIST dataset."
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Tt0rL4ycp4ZB"
