--- a/MLP/mlp-mnist.ipynb
+++ b/MLP/mlp-mnist.ipynb
@@ -16,6 +16,16 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Description\n",
+        "\n",
+        "In this notebook, we will be training a one-hidden-layer multilayer perceptron (MLP) on the MNIST dataset."
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Tt0rL4ycp4ZB"
