--- a/AE/vae-mlp-mnist.ipynb
+++ b/AE/vae-mlp-mnist.ipynb
@@ -22,7 +22,7 @@
       "source": [
         "## Description\n",
         "\n",
-        "In this notebook, we will be training a MLP-based variational autoencoder on the MNIST dataset."
+        "In this notebook, we will be training a MLP-based [variational autoencoder](https://arxiv.org/abs/1312.6114) on the MNIST dataset."
       ]
     },
     {
